style.css
.headShot{
    border-radius: 50%;
    width: 100%;
}

.center {
    margin: auto;
    width: 50%;
    padding: 10px;
}

.navbar {
    overflow: hidden;
    position: fixed !important;
    top: 0;
    z-index: 1;
}

#AboutMe{
    padding: 0;
}

.skills {
    overflow: hidden;
}

.card img{
    position: relative;
    float: left;
    width:  100%;
    height: 250px;
    background-position: 50% 50%;
    background-repeat:   no-repeat;
    background-size:     cover;
}

.home, .bgimg-2, .bgimg-3 {
    position: relative;
    background-attachment: fixed;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
  
  }
  .home {
    background-image: url("ScenicBay.png");
    min-height: 100%;
    margin-top: 4.5%;
  }
  
  .bgimg-2 {
    background-image: url("ScenicBay.png");
    min-height: 400px;
    opacity: 0.65;
  }
  
  .bgimg-3 {
    background-image: url("ScenicBay.png");
    min-height: 400px;
    opacity: 0.65;
  }
  
  /* Turn off parallax scrolling for tablets and phones. Increase/decrease the pixels if needed */
@media only screen and (max-device-width: 1024px) {
    .parallax {
        background-attachment: scroll;
    }
}


.morecontent span {
    display: none;
}
.morelink {
    display: block;
}

